--- a/styles/style.css
+++ b/styles/style.css
@@ -158,3 +158,13 @@ footer {
 .showroom .pedido {
     margin-right: 16px;
 }
+
+.ligado {
+    background-color: #404EED;
+}
+
+.selecionado1, .selecionado2, .selecionado3 {
+    border-style: solid;
+    border-width: 3px;
+    border-color: #404EED;
+}
